--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.5.9"
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.5.9",
+    "flowbite": "^2.3.0",
+    "tailwindcss": "^3.4.1"
   }
 }
